--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.example</groupId>
-	<artifactId>jogadores</artifactId>
+	<artifactId>projetos</artifactId> <!-- Alterado de jogadores para projetos -->
 	<version>0.0.1-SNAPSHOT</version>
-	<name>jogadores</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<name>projetos</name> <!-- Nome do projeto atualizado -->
+	<description>API para gerenciamento de projetos</description>
+	
 	<properties>
-		<java.version>21</java.version>
+		<java.version>21</java.version> <!-- Garantindo que estamos utilizando o JDK 21 -->
 		<project.test.result.directory>${project.build.directory}/test-results</project.test.result.directory>
 	</properties>
+	
 	<dependencies>
+		<!-- Dependências Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -46,16 +40,22 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- SpringDoc para documentação OpenAPI/Swagger -->
 		<dependency>
 		      <groupId>org.springdoc</groupId>
 		      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		      <version>2.3.0</version>
 	   	</dependency>
+
+		<!-- Lombok para evitar boilerplate de código -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<!-- Dependências para testes -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -65,10 +65,13 @@
 
 	<build>
 		<plugins>
+			<!-- Spring Boot Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- Jacoco Plugin para cobertura de código -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -84,7 +87,6 @@
 							<destFile>${project.test.result.directory}/jacoco/jacoco.exec</destFile>
 						</configuration>
 					</execution>
-
 					<execution>
 						<id>post-test</id>
 						<phase>test</phase>
@@ -98,6 +100,8 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Maven Surefire Plugin para executar testes -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
